--- a/Sample_05_XX/Sample_05_XX/Sample_05_XX.vcxproj
+++ b/Sample_05_XX/Sample_05_XX/Sample_05_XX.vcxproj
@@ -87,7 +87,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)/../MiniEngine;$(SolutionDir)/Sample_00;$(SolutionDir)/../MiniEngine</IncludePath>
+    <IncludePath>$(VC_IncludePath);$(IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)/../MiniEngine;$(ProjectDir)/;$(SolutionDir)/../MiniEngine</IncludePath>
     <LibraryPath>$(SolutionDir)/../MiniEngine/DirectXTK/Bin/Desktop_2019_Win10/x64/Release;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
